--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-half">
         <img src="/w3images/wedding.jpg" style="width:100%">
         <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/sailboat.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063468947879497748/FqbfqCAN8SvQVhqL3Jd3--3--4qkrw.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
