--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470920620060732/q4TxniUIZXxXdty9duXs--1--8bvl3.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470966430245024/TUGFU34SIrfPtUx4FxT4--4--kpfto.jpg" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063468947879497748/FqbfqCAN8SvQVhqL3Jd3--3--4qkrw.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470965830455406/7ZJdrAzXSVXNWhTYclM1--1--ofbsj.jpg" style="width:100%">
         <img src="/w3images/chef.jpg" style="width:100%">
         <img src="/w3images/wedding.jpg" style="width:100%">
         <img src="/w3images/p6.jpg" style="width:100%">
@@ -191,18 +191,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: hustlerlardy@gmail.com</p>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
-
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
+    
   <!-- End Contact Section -->
   </div>
   
