--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Lardy's</span> Workshop.</h1>
-    <p>Photographer and Web Designer.</p>
-    <img src="/w3images/man_smoke.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <p>Made by Lardy - Designer, Artist.</p>
+    <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063476523732045824/Comp_1000.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -171,7 +171,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
       <div class="w3-half">
         <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470965830455406/7ZJdrAzXSVXNWhTYclM1--1--ofbsj.jpg" style="width:100%">
-        <img src="/w3images/chef.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063476702552002580/Comp_1_2.gif" style="width:100%">
         <img src="/w3images/wedding.jpg" style="width:100%">
         <img src="/w3images/p6.jpg" style="width:100%">
       </div>
