--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
-    <h2 class="w3-text-light-grey">My Photos</h2>
+    <h2 class="w3-text-light-grey">Portfolio</h2>
+    <h2 class="w3-text-light-grey">AI, GFX, VFX</h2>
     <hr style="width:200px" class="w3-opacity">
 
     <!-- Grid for photos -->
