--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">11+</span><br>
+        <span class="w3-xlarge">3+</span><br>
         Partners
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
+        <span class="w3-xlarge">120+</span><br>
         Projects Done
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
+        <span class="w3-xlarge">93+</span><br>
         Happy Clients
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
+        <span class="w3-xlarge">2+</span><br>
+        Years Experience
       </div>
     </div>
     
@@ -106,34 +106,34 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
-          <li class="w3-padding-16">Web Design</li>
-          <li class="w3-padding-16">Photography</li>
-          <li class="w3-padding-16">5GB Storage</li>
-          <li class="w3-padding-16">Mail Support</li>
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">Standard - Choose 1 option</li>
+          <li class="w3-padding-16">Discord Logo(animated)</li>
+          <li class="w3-padding-16">4 AI Generated images</li>
+          <li class="w3-padding-16">Photoshop edit (standard)</li>
+          <li class="w3-padding-16">Discord Banner (static)</li>
           <li class="w3-padding-16">
-            <h2>$ 10</h2>
-            <span class="w3-opacity">per month</span>
+            <h2>€ 5</h2>
+            <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+            <a href="https://discord.gg/MWMK6W7TSe" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
 
       <div class="w3-half">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Pro</li>
-          <li class="w3-padding-16">Web Design</li>
-          <li class="w3-padding-16">Photography</li>
-          <li class="w3-padding-16">50GB Storage</li>
-          <li class="w3-padding-16">Endless Support</li>
-          <li class="w3-padding-16">
-            <h2>$ 25</h2>
-            <span class="w3-opacity">per month</span>
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">Elite - Choose 2 options</li>
+          <li class="w3-padding-16">Discord Logo (animated) 2x</li>
+          <li class="w3-padding-16">8 AI Generated images (high quality)</li>
+          <li class="w3-padding-16">Photoshop edit (professional)</li>
+          <li class="w3-padding-16">Discord Banner (animated)</li>
+          <li class="w3-padding-16">3D Custom work</li>
+            <h2>€ 15</h2>
+            <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+            <a href="https://discord.gg/MWMK6W7TSe" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
