--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     
     <!-- Grid for pricing tables -->
-    <h3 class="w3-padding-16 w3-text-light-grey">My Price</h3>
+    <h3 class="w3-padding-16 w3-text-light-grey">My Prices</h3>
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
@@ -116,7 +116,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <a href="https://discord.gg/MWMK6W7TSe" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
+            <a href="https://discord.gg/MWMK6W7TSe" target="_blank" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
@@ -133,7 +133,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <a href="https://discord.gg/MWMK6W7TSe" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
+            <a href="https://discord.gg/MWMK6W7TSe" target="_blank" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
@@ -143,22 +143,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
     <h2 class="w3-text-light-grey">Portfolio</h2>
-    <h2 class="w3-text-light-grey">AI, GFX, VFX</h2>
+    <h2 class="w3-text-light-grey">AI | GFX | VFX</h2>
     <hr style="width:200px" class="w3-opacity">
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470920620060732/q4TxniUIZXxXdty9duXs--1--8bvl3.jpg" style="width:100%">
-        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470966430245024/TUGFU34SIrfPtUx4FxT4--4--kpfto.jpg" style="width:100%">
-        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063468947879497748/FqbfqCAN8SvQVhqL3Jd3--3--4qkrw.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517645497974865/Astronaut_Watermarked.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517645758009445/Death_Watermarked.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063516756087427113/1673632525062_Comp_1.gif" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="https://cdn.discordapp.com/attachments/1063178183173746830/1063470965830455406/7ZJdrAzXSVXNWhTYclM1--1--ofbsj.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517646022254753/NFT_Apple_Watermarked.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517646286491708/Skull_Watermarked.jpg" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063485165046878238/Comp_1_1.gif" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/p6.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
