--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="/w3images/avatar_smoke.jpg" style="width:100%">
+  <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063520656517509230/Comp_1_10.png" style="width:30%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Lardy's</span> Workshop.</h1>
     <p>Made by Lardy - Designer, Artist.</p>
-    <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063476523732045824/Comp_1000.jpg" alt="boy" class="w3-image" width="500" height="500">
+    <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063520634065399898/Comp_1_10.png" alt="boy" class="w3-image" width="500" height="500">
   </header>
 
   <!-- About Section -->
@@ -174,7 +174,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +420 739 065 865</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: hustlerlardy@gmail.com</p>
     </div><br>
-    <p>Let's get in touch. Send me a message:</p>
+    <p>Let's get in touch. Send me a message!</p>
     
   <!-- End Contact Section -->
   </div>
