--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Static Design</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:75%"></div>
+      <div class="w3-dark-blue" style="height:28px;width:75%"></div>
     </div>
     <p class="w3-wide">Visual Design</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+      <div class="w3-light-blue" style="height:28px;width:85%"></div>
     </div>
     <p class="w3-wide">AI Creations</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:65%"></div>
+      <div class="w3-dark-blue" style="height:28px;width:65%"></div>
     </div><br>
     
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
@@ -179,13 +179,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
   
     <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
     <p class="w3-medium">Powered by <a href="https://discord.gg/MWMK6W7TSe" target="_blank" class="w3-hover-text-green">Lardy's Workshop</a></p>
   <!-- End footer -->
   </footer>
