--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Static Design</p>
     <div class="w3-white">
-      <div class="w3-dark-blue" style="height:28px;width:75%"></div>
+      <div class="w3-blue" style="height:28px;width:75%"></div>
     </div>
     <p class="w3-wide">Visual Design</p>
     <div class="w3-white">
@@ -78,7 +78,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <p class="w3-wide">AI Creations</p>
     <div class="w3-white">
-      <div class="w3-dark-blue" style="height:28px;width:65%"></div>
+      <div class="w3-blue" style="height:28px;width:65%"></div>
     </div><br>
     
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
