--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <p class="w3-wide">Visual Design</p>
     <div class="w3-white">
-      <div class="w3-light-blue" style="height:28px;width:85%"></div>
+      <div class="w3-blue" style="height:28px;width:85%"></div>
     </div>
     <p class="w3-wide">AI Creations</p>
     <div class="w3-white">
