--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+html {scroll-behavior: smooth}
 header {background: transparent}
 body {background: linear-gradient(#e66465, #9198e5)}
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
