--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
 
   <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+  <div class="w3-content w3-justify w3-text-black w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Project Info</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>Lardy's Workshop is designing service made with love. The whole point is to create, evolve and sell graphics design using AI Creations, Visual Graphics, Static Graphics and 3D Modeling. 
@@ -166,7 +166,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
 
   <!-- Contact Section -->
-  <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+  <div class="w3-padding-64 w3-content w3-text-black" id="contact">
     <h2 class="w3-text-light-grey">Contact Me</h2>
     <hr style="width:200px" class="w3-opacity">
 
