--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+.intro-container {
+    width: 100%;
+    height: 300px;
+}
+.intro {
+    justify-content: center;
+    place-items: center;
+    text-align: center;
+}
 html {scroll-behavior: smooth}
 header {background: transparent}
 body {background: linear-gradient(#e66465, #9198e5)}
@@ -22,8 +31,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </style>
 </head>
 <body class="w3-black">
- <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063525534090416208/Comp_2_10.png" alt="boy" class="w3-image" width="1000" height="500">
+<div class="intro-container">
+    <div class="intro">
+    <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063525534090416208/Comp_2_10.png" alt="boy" class="w3-image" width="1000" height="500">
     <p>Made by Lardy - Designer, Artist.</p>
+    </div>
+    </div>
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
