--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 }
 html {scroll-behavior: smooth}
 header {background: transparent}
-body {background: linear-gradient(#e66465, #9198e5)}
+body {background: linear-gradient(#00002a, #002130c2)}
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
