--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     text-align: center;
 }
 html {scroll-behavior: smooth}
-header {background: transparent}
+body {
 background: rgb(2,0,36);
 background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(8,8,109,1) 38%, rgba(9,9,121,1) 66%, rgba(0,212,255,1) 100%);
+}
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
