--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <a href="https://discord.gg/MWMK6W7TSe" target="_blank" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
@@ -147,7 +147,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <a href="https://discord.gg/MWMK6W7TSe" target="_blank" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-white w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
@@ -193,7 +193,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
   
     <!-- Footer -->
-    <p class="w3-medium">Powered by <a href="https://discord.gg/MWMK6W7TSe" target="_blank" class="w3-hover-text-green">Lardy's Workshop</a></p>
+    <p class="w3-medium">Powered by <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-hover-text-green">Lardy's Workshop</a></p>
   <!-- End footer -->
   </footer>
 
