--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-white w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Project Info</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Lardy's Workshop is designing service made with love. The whole point is to create, evolve and sell graphics design using AI Creations, Visual Graphics, Static Graphics and 3D Modeling. 
+    <p>Lardy's Workshop is designing service made with love. The whole point is to create, evolve and sell graphics design using Digital Art, Visual Graphics, Static Graphics and 3D Modeling. 
       Project was created in the August of 2022 and officialy started at January 15th, 2023. 
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
@@ -157,21 +157,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
     <h2 class="w3-text-light-grey">Portfolio</h2>
-    <h2 class="w3-text-light-grey">AI | GFX | VFX</h2>
+    <h2 class="w3-text-light-grey">ART | GFX | VFX</h2>
     <hr style="width:200px" class="w3-opacity">
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517645497974865/Astronaut_Watermarked.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063937225718517830/Kitty_Watermarked.png" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517645758009445/Death_Watermarked.jpg" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063516756087427113/1673632525062_Comp_1.gif" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517646022254753/NFT_Apple_Watermarked.jpg" style="width:100%">
-        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517646286491708/Skull_Watermarked.jpg" style="width:100%">
-        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063485165046878238/Comp_1_1.gif" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063937225357791333/Jelly_Apple_NFT_Watermarked.png" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063938303985991762/Cyber_Girl_Watermarked.png" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063940068147990598/1673733402196_Comp_1.gif" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
