--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-white">
       <div class="w3-blue" style="height:28px;width:85%"></div>
     </div>
-    <p class="w3-wide">AI Creations</p>
+    <p class="w3-wide">Art Skills</p>
     <div class="w3-white">
       <div class="w3-blue" style="height:28px;width:65%"></div>
     </div><br>
@@ -122,7 +122,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-dark-grey w3-xlarge w3-padding-32">Standard - Choose 1 option</li>
           <li class="w3-padding-16">Discord Logo(animated)</li>
-          <li class="w3-padding-16">4 AI Generated images</li>
+          <li class="w3-padding-16">1 Custom Art images</li>
           <li class="w3-padding-16">Photoshop edit (standard)</li>
           <li class="w3-padding-16">Discord Banner (static)</li>
           <li class="w3-padding-16">
@@ -139,7 +139,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-dark-grey w3-xlarge w3-padding-32">Elite - Choose 2 options</li>
           <li class="w3-padding-16">Discord Logo (animated) 2x</li>
-          <li class="w3-padding-16">8 AI Generated images (high quality)</li>
+          <li class="w3-padding-16">2 Custom Arts (high quality)</li>
           <li class="w3-padding-16">Photoshop edit (professional)</li>
           <li class="w3-padding-16">Discord Banner (animated)</li>
           <li class="w3-padding-16">3D Custom work</li>
