--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-white w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Project Info</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Lardy's Workshop is designing service made with love. The whole point is to create, evolve and sell graphics design using Digital Art, Visual Graphics, Static Graphics and 3D Modeling. 
+    <p>Lardy's Workshop is a designing service made with love. The whole point is to create, evolve and sell graphics design using Digital Art, Visual Graphics, Static Graphics and 3D Modeling. 
       Project was created in the August of 2022 and officialy started at January 15th, 2023. 
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
