--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Standard - Choose 1 option</li>
-          <li class="w3-padding-16">Discord Logo(animated)</li>
-          <li class="w3-padding-16">1 Custom Art images</li>
-          <li class="w3-padding-16">Photoshop edit (standard)</li>
-          <li class="w3-padding-16">Discord Banner (static)</li>
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
+          <li class="w3-padding-16">Discord Customization</li>
+          <li class="w3-padding-16">Custom art - Medium quality</li>
+          <li class="w3-padding-16">Custom order - Standard</li>
           <li class="w3-padding-16">
-            <h2>€ 5</h2>
+          <li class="w3-padding-16">
+            <h2>(Discord price)</h2>
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
@@ -137,13 +137,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
       <div class="w3-half">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Elite - Choose 2 options</li>
-          <li class="w3-padding-16">Discord Logo (animated) 2x</li>
-          <li class="w3-padding-16">2 Custom Arts (high quality)</li>
-          <li class="w3-padding-16">Photoshop edit (professional)</li>
-          <li class="w3-padding-16">Discord Banner (animated)</li>
-          <li class="w3-padding-16">3D Custom work</li>
-            <h2>€ 15</h2>
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">Advanced</li>
+          <li class="w3-padding-16">All listed on left</li>
+          <li class="w3-padding-16">Proffesional Photoshop edit</li>
+          <li class="w3-padding-16">3D Modelling contract</li>
+          <li class="w3-padding-16">
+          <li class="w3-padding-16">
+            <h2>(Discord price)</h2>
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
@@ -186,6 +186,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Czech Republic</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: hustlerlardy@gmail.com</p>
+      <p><i class="fa fa-instagram"></i> Instagram: lardys_workshop</p>
     </div><br>
     <p>Let's get in touch. Send me a message!</p>
     
