--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Czech Republic</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: hustlerlardy@gmail.com</p>
-      <p><i class="fa fa-instagram"></i> Instagram: lardys_workshop</p>
+      <p><i class="fa fa-instagram fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Instagram: lardys_workshop</p>
     </div><br>
     <p>Let's get in touch. Send me a message!</p>
     
