--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
+          <li class="w3-blue w3-xlarge w3-padding-32">Basic</li>
           <li class="w3-padding-16">Discord Customization</li>
           <li class="w3-padding-16">Custom art - Medium quality</li>
           <li class="w3-padding-16">Custom order - Standard</li>
@@ -137,7 +137,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
       <div class="w3-half">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Advanced</li>
+          <li class="w3-blue w3-xlarge w3-padding-32">Advanced</li>
           <li class="w3-padding-16">All listed on left</li>
           <li class="w3-padding-16">Proffesional Photoshop edit</li>
           <li class="w3-padding-16">3D Modelling contract</li>
