--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-half">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-blue w3-xlarge w3-padding-32">Advanced</li>
-          <li class="w3-padding-16">All listed on left</li>
-          <li class="w3-padding-16">Proffesional Photoshop edit</li>
+          <li class="w3-padding-16">Including all listed on left</li>
+          <li class="w3-padding-16">Professional Photoshop edit</li>
           <li class="w3-padding-16">3D Modelling contract</li>
           <li class="w3-padding-16">
           <li class="w3-padding-16">
