--- a/index.html
+++ b/index.html
@@ -165,12 +165,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-half">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063937225718517830/Kitty_Watermarked.png" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063517645758009445/Death_Watermarked.jpg" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1064231087401873478/Astronaut_Watermarked.jpg" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063516756087427113/1673632525062_Comp_1.gif" style="width:100%">
       </div>
 
       <div class="w3-half">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063937225357791333/Jelly_Apple_NFT_Watermarked.png" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063938303985991762/Cyber_Girl_Watermarked.png" style="width:100%">
+        <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1064231087645147296/SInner_Watermarked.jpg" style="width:100%">
         <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063940068147990598/1673733402196_Comp_1.gif" style="width:100%">
       </div>
     <!-- End photo grid -->
