--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 }
 html {scroll-behavior: smooth}
 body {
-background: rgb(2,0,36);
-background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(15,60,77,1) 38%, rgba(15,60,77,1) 66%, rgba(0,123,148,1) 100%);
+background: url(https://storage.sell.app/store/5162/images/Fb9b7jy62jWQ1GVXHTeueAJDqVdsVszimPLC4T6a.jpg) center center no-repeat fixed; background-size: cover;
 }
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
