--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 }
 html {scroll-behavior: smooth}
 body {
-background: url(https://storage.sell.app/store/5162/images/Fb9b7jy62jWQ1GVXHTeueAJDqVdsVszimPLC4T6a.jpg) center center no-repeat fixed; background-size: cover;
+background: url(https://cdn.discordapp.com/attachments/1063472451952062474/1066833956168794142/Fb9b7jy62jWQ1GVXHTeueAJDqVdsVszimPLC4T6a.png) center center no-repeat fixed; background-size: cover;
 }
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -55,7 +55,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </a>
 </nav>
     <div class="intro">
-    <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1063525534090416208/Comp_2_10.png" alt="boy" class="w3-image" width="1000" height="500">
+    <img src="https://cdn.discordapp.com/attachments/1063472451952062474/1066842188224409750/Stretched_-_Website.png" alt="boy" class="w3-image" width="1000" height="500">
     <p>Made by Lardy - Designer, Artist.</p>
     </div>
     
