--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-padding-16 w3-text-light-grey">My Prices</h3>
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
-        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+        <ul class="w3-ul w3-black w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-blue w3-xlarge w3-padding-32">Basic</li>
           <li class="w3-padding-16">Discord Customization</li>
           <li class="w3-padding-16">Custom art - Medium quality</li>
@@ -135,7 +135,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
 
       <div class="w3-half">
-        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+        <ul class="w3-ul w3-black w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-blue w3-xlarge w3-padding-32">Advanced</li>
           <li class="w3-padding-16">Including all listed on left</li>
           <li class="w3-padding-16">Professional Photoshop edit</li>
