--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <h2>(Discord price)</h2>
             <span class="w3-opacity">per order</span>
           </li>
-          <li class="w3-light-grey w3-padding-24">
-            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-grey w3-padding-large w3-hover-black">Order Here</a>
+          <li class="w3-grey w3-padding-24">
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-light-grey w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
@@ -145,8 +145,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <h2>(Discord price)</h2>
             <span class="w3-opacity">per order</span>
           </li>
-          <li class="w3-light-grey w3-padding-24">
-            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-grey w3-padding-large w3-hover-black">Order Here</a>
+          <li class="w3-grey w3-padding-24">
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-light-grey w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
