--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
 
       <div class="w3-half">
-        <ul class="w3-grey w3-center w3-opacity w3-hover-opacity-off">
+        <ul class="w3-light-grey w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-blue w3-xlarge w3-padding-32">Advanced</li>
           <li class="w3-padding-16">Including all listed on left</li>
           <li class="w3-padding-16">Professional Photoshop edit</li>
@@ -146,8 +146,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <h2>(Discord price)</h2>
             <span class="w3-opacity">per order</span>
           </li>
-          <li class="w3-grey w3-padding-24">
-            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-grey w3-padding-large w3-hover-black">Order Here</a>
+          <li class="w3-light-grey w3-padding-24">
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-light-grey w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
