--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <span class="w3-opacity">per order</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <a href="http://bit.ly/3COGH5T" target="_blank"><button class="w3-btn w3-white w3-border w3-border-green w3-round-xlarge"Order here!</button></a>
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-light-grey w3-padding-large w3-hover-black">Order Here</a>
           </li>
         </ul>
       </div>
