--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 #main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
+.w3-half {
+border-radius: 25px;
+}  
 </style>
 </head>
 <body class="w3-black">
