--- a/index.html
+++ b/index.html
@@ -138,7 +138,54 @@ border-radius: 25px;
         </ul>
       </div>
 
-      <div class="w3-half">
+<div class="container">
+   <div class="btn">
+      <div class="shop-now">Shop now</div>
+      <div class="snowflake-grid to-left">
+         <div class="snowflake-item border-bottom border-right">
+            <div class="sub-items border-right border-bottom pull-down">
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+         <div class="snowflake-item border-bottom border-left">
+            <div
+               class="sub-items border-right border-bottom r-90 pull-down-right"
+               >
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+         <div class="snowflake-item border-top border-right">
+            <div class="sub-items border-right border-bottom r-270 pull-right">
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+         <div class="snowflake-item border-top border-left">
+            <div class="sub-items border-right border-bottom r-180 pull-left">
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+      </div>
+      <div class="snowflake-grid to-right">
+         <div class="snowflake-item border-bottom border-right">
+            <div class="sub-items border-right border-bottom pull-down">
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+         <div class="snowflake-item border-bottom border-left">
+            <div
+               class="sub-items border-right border-bottom r-90 pull-down-right"
+               >
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+         <div class="snowflake-item border-top border-right">
+            <div class="sub-items border-right border-bottom r-270 pull-right">
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
+            </div>
+         </div>
+         <div class="snowflake-item border-top border-left">
+            <div class="sub-items border-right border-bottom r-180 pull-left">
+               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
         <ul class="w3-light-grey w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-blue w3-xlarge w3-padding-32">Advanced</li>
           <li class="w3-padding-16">Including all listed on left</li>
