--- a/index.html
+++ b/index.html
@@ -138,55 +138,22 @@ border-radius: 25px;
         </ul>
       </div>
 
-        <div class="container">
-   <div class="btn">
-      <div class="shop-now">Shop now</div>
-      <div class="snowflake-grid to-left">
-         <div class="snowflake-item border-bottom border-right">
-            <div class="sub-items border-right border-bottom pull-down">
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
-         <div class="snowflake-item border-bottom border-left">
-            <div
-               class="sub-items border-right border-bottom r-90 pull-down-right"
-               >
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
-         <div class="snowflake-item border-top border-right">
-            <div class="sub-items border-right border-bottom r-270 pull-right">
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
-         <div class="snowflake-item border-top border-left">
-            <div class="sub-items border-right border-bottom r-180 pull-left">
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
+    <div class="w3-half">
+        <ul class="w3-light-grey w3-center w3-opacity w3-hover-opacity-off">
+          <li class="w3-blue w3-xlarge w3-padding-32">Advanced</li>
+          <li class="w3-padding-16">Including all listed on left</li>
+          <li class="w3-padding-16">Professional Photoshop edit</li>
+          <li class="w3-padding-16">3D Modelling contract</li>
+          <li class="w3-padding-16">
+          <li class="w3-padding-16">
+            <h2>(Discord price)</h2>
+            <span class="w3-opacity">per order</span>
+          </li>
+          <li class="w3-light-grey w3-padding-24">
+            <a href="http://bit.ly/3COGH5T" target="_blank" class="w3-button w3-light-grey w3-padding-large w3-hover-black">Order Here</a>
+          </li>
+        </ul>
       </div>
-      <div class="snowflake-grid to-right">
-         <div class="snowflake-item border-bottom border-right">
-            <div class="sub-items border-right border-bottom pull-down">
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
-         <div class="snowflake-item border-bottom border-left">
-            <div
-               class="sub-items border-right border-bottom r-90 pull-down-right"
-               >
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
-         <div class="snowflake-item border-top border-right">
-            <div class="sub-items border-right border-bottom r-270 pull-right">
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-            </div>
-         </div>
-         <div class="snowflake-item border-top border-left">
-            <div class="sub-items border-right border-bottom r-180 pull-left">
-               <div class="m-w-15 m-h-15 border-right border-bottom m-3"></div>
-
     <!-- End Grid/Pricing tables -->
     </div>
   
